# tool-call-bench

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/results/: evaluation_results_20250721_122415.json  evaluation_results_20250721_124914.json  evaluation_results_20250721_133728.json  evaluation_results_20250721_140938.json  evaluation_results_20250721_150742.json  evaluation_results_20250721_151307.json  evaluation_results_20250721_152741.json  evaluation_results_claude_sonnet_37_20250721_122415.json  evaluation_results_claude_sonnet_37_20250721_124914.json  evaluation_results_claude_sonnet_37_20250721_140938.json  evaluation_results_claude_sonnet_37_20250721_141030.json  evaluation_results_claude_sonnet_37_20250721_150742.json  evaluation_results_claude_sonnet_37_20250721_151307.json  evaluation_results_claude_sonnet_37_20250721_152741.json  evaluation_results_gemini_25_flash_20250721_122415.json  evaluation_results_gemini_25_flash_20250721_124914.json  evaluation_results_gemini_25_flash_20250721_131610.json  evaluation_results_gemini_25_flash_20250721_133728.json  evaluation_results_gemini_25_flash_20250721_140938.json  evaluation_results_gemini_25_flash_20250721_151307.json  evaluation_results_gemini_25_flash_20250721_152741.json  evaluation_results_gpt_4o_20250721_122415.json  evaluation_results_gpt_4o_20250721_124914.json  evaluation_results_gpt_4o_20250721_140938.json  evaluation_results_gpt_4o_20250721_141030.json  (+17 more)
modules/: __init__.py  config.py  evaluator.py  file_downloader.py  sheets_client.py  trajectory_extractor.py
(+10 files in other folders)
